--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.1.2",
+    "lodash": "^4.17.15",
     "pug-plain-loader": "^1.0.0",
     "vue": "^2.6.10",
     "vuetify": "^2.1.0",
